force-app/main/default/objects/VA_Identity__c/VA_Identity__c.object-meta.xml
<CustomObject>
    <description
    >Goal is to create a Salesforce VA SOR Identity object (separate from Account/Contact) deployed in multiple Salesforce Orgs Allows middleware to work with a consistent
        pattern of objects/fields across all Orgs Not required by DIP, but would simplify configuration and reduce complexity In the future, this core VA SOR Identify Object could
        be part of a Salesforce common package, distributable and available for dependency management orchestration</description>
    <label>VA Identity</label>
    <nameField>
        <displayFormat>I{0}</displayFormat>
        <label>VA Identity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VA Identity</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>