force-app/main/default/objects/VA_Identity__c/fields/Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Birth__c</fullName>
    <description>Person&apos;s birthdate.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Person&apos;s birthdate.</inlineHelpText>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>