force-app/main/default/objects/VA_Identity__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <description>Person&apos;s first name.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Person&apos;s first name.</inlineHelpText>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>