force-app/main/default/objects/VA_Identity__c/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <description>Person&apos;s phone number.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Person&apos;s phone number.</inlineHelpText>
    <label>Phone Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>