force-app/main/default/objects/VA_Identity__c/fields/Place_of_Birth_Country__c.field-meta.xml
<CustomField>
    <fullName>Place_of_Birth_Country__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Place of Birth - Country</label>
    <type>TextArea</type>
</CustomField>