force-app/main/default/objects/VA_Identity__c/fields/Prefix__c.field-meta.xml
<CustomField>
    <fullName>Prefix__c</fullName>
    <description>Person&apos;s prefix to their name.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Person&apos;s prefix to their name.</inlineHelpText>
    <label>Prefix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>