force-app/main/default/objects/VA_Identity__c/fields/Primary_Address_Country__c.field-meta.xml
<CustomField>
    <fullName>Primary_Address_Country__c</fullName>
    <description>The country of the person&apos;s address.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The country of the person&apos;s address.</inlineHelpText>
    <label>Primary Address Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>