force-app/main/default/objects/VA_Identity__c/fields/Primary_Address_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Primary_Address_Postal_Code__c</fullName>
    <description>Postal code/zip code of the primary address.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Postal code/zip code of the primary address.</inlineHelpText>
    <label>Primary Address Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>