force-app/main/default/objects/VA_Identity__c/fields/Primary_Address_Street_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Primary_Address_Street_Line_2__c</fullName>
    <description>Primary street address line 2.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Primary street address line 2.</inlineHelpText>
    <label>Primary Address Street Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>