force-app/main/default/objects/VA_Identity__c/fields/VAP_Corresp_Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>VAP_Corresp_Address_Line_1__c</fullName>
    <description>The street address for correspondence from VA Profile.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The street address for correspondence from VA Profile.</inlineHelpText>
    <label>Corresp. Address Line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>