force-app/main/default/objects/VA_Identity__c/fields/VAP_Corresp_State__c.field-meta.xml
<CustomField>
    <fullName>VAP_Corresp_State__c</fullName>
    <description>The state/territory/province for correspondence from VA Profile.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The state/territory/province for correspondence from VA Profile.</inlineHelpText>
    <label>Corresp. State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>