force-app/main/default/objects/VA_Identity__c/fields/VAP_Email__c.field-meta.xml
<CustomField>
    <fullName>VAP_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Email</label>
    <type>Email</type>
</CustomField>