force-app/main/default/objects/VA_Identity__c/fields/VAP_Phone_Mobile__c.field-meta.xml
<CustomField>
    <fullName>VAP_Phone_Mobile__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Phone (Mobile)</label>
    <type>Phone</type>
</CustomField>