force-app/main/default/objects/VA_Identity__c/fields/VAP_Phone_Temporary__c.field-meta.xml
<CustomField>
    <fullName>VAP_Phone_Temporary__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Phone (Temporary)</label>
    <type>Phone</type>
</CustomField>