force-app/main/default/objects/VA_Identity__c/fields/VCC_Primary_Registered_Facility__c.field-meta.xml
<CustomField>
    <fullName>VCC_Primary_Registered_Facility__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary Registered Facility</label>
    <length>50</length>
    <type>Text</type>
</CustomField>